update DG Course Planner section and other parts

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -815,6 +815,7 @@ after executions of *non-invertible commands*. However, if a
  `HistoryManager#inverselyExecutedCommands` will be cleared. This is
 similar to how navigation works between pages you visit in a browser tab.
 
+// tag::courseplanner[]
 === Course Planner feature
 
 ==== Overview
@@ -1017,7 +1018,7 @@ The following class diagram demonstrates the structure of the `abstract class`
 `AndOrNode` and its sub-classes.
 
 .AndOrNode Inheritance Diagram
-image::AndOrNodeInheritanceClassDiagram.png[800,600]
+image::ryanytan-AndOrNodeInheritanceClassDiagram.png[800,600]
 
 Using this format, a static method of the form `AndOrNode#createNode(T,String)`
 is able to construct all instances of its sub-class, thus the caller will not
@@ -1086,7 +1087,7 @@ recursively from the root. The sequence diagram of the tree building process is
 shown below:
 
 .buildTree() Sequence Diagram
-image::AndOrSequenceDiagramSimplified.png[]
+image::ryanytan-AndOrSequenceDiagramSimplified.png[]
 
 The class looks at each node - checks if its is an `Object`, `Array` or a
 `String`, and does the appropriate actions and function calls.
@@ -1152,13 +1153,15 @@ list. The following is the activity diagram of general overview of the process
 when the user types a `check` command.
 
 .Check Command Activity Diagram
-image::CheckActivityDiagram.png[TODO]
+image::ryanytan-CheckActivityDiagram.png[TODO]
 
 Additionally, the following below shows the sequence diagram of how the
 program checks if the user satisfies the course's prerequisites.
 
 .CheckCommand Sequence Diagram
-image::CheckCommandSequenceDiagram.png[]
+image::ryanytan-CheckCommandSequenceDiagram.png[]
+
+// end::courseplanner[]
 
 === Finance Tracker feature
 
@@ -1744,7 +1747,7 @@ Priorities: High (must have) - `* * \*`, Medium (nice to have) - `* \*`, Low
 Use case ends.
 
 [discrete]
-=== Use case: Marks task in planner as done
+=== Use case: Mark task in planner as done
 
 *MSS*
 
@@ -1777,40 +1780,40 @@ Use case resumes at step 2.
 Use case ends.
 
 [discrete]
-=== Use case: View prerequisite tree
+=== Use case: Check if the user can check a course
 
 *MSS*
 
-1. User requests to for the prerequisite tree of a certain module
-2. `Jarvis` shows the prerequisite tree
+1. User requests whether they can take a certain course.
+2. Jarvis shows whether they can take the course.
 +
 Use case ends.
 
 *Extensions*
 
-* 2a. The given module code is invalid
+* 2a. The given course code is invalid
 +
 [none]
-** 2a1. AddressBook shows an error message.
+** 2a1. Jarvis shows an error message.
 +
 Use case resumes at step 1.
 
 [appendix]
 == Non Functional Requirements
 
-. `Jarvis` should work on any mainstream OS as long as it has Java 11 or
+. Jarvis should work on any mainstream OS as long as it has Java 11 or
   above installed.
 
 . A user with above average typing speed for regular English text (i.e. not
   code, not system admin commands) should be able to accomplish most of the
   tasks faster using commands than using the mouse.
 
-. `Jarvis` should respond within two seconds.
+. Jarvis should respond within two seconds.
 
-. `Jarvis` should be usable by a novice who has never used a command line
+. Jarvis should be usable by a novice who has never used a command line
   interface.
 
-. `Jarvis` should be able to work without any internet connection.
+. Jarvis should be able to work without any internet connection.
 
 [appendix]
 == Glossary
@@ -1836,7 +1839,7 @@ Pros:
 Cons:
 
 * ...
-* ...
+ ...
 
 [appendix]
 == Instructions for Manual Testing
@@ -1849,15 +1852,16 @@ testers are expected to do more _exploratory_ testing.
 
 === Launch and Shutdown
 
-. Initial launch
+. **Initial Launch**
 
 .. Download the jar file and copy into an empty folder
 
-.. Double-click the jar file +
-   Expected: Shows the GUI with a set of sample contacts. The window size may
-   not be optimum.
+.. Double-click the jar file
++
+Expected: Shows the GUI with a set of sample data in every feature. The window
+size may not be optimal
 
-. Saving window preferences
+. **Saving Window Preferences**
 
 .. Resize the window to an optimum size. Move the window to a different
    location. Close the window.
@@ -1865,9 +1869,18 @@ testers are expected to do more _exploratory_ testing.
 .. Re-launch the app by double-clicking the jar file. +
    Expected: The most recent window size and location is retained.
 
+. **Storage**
+
+.. Launch the application and make a change that changes the state of the
+   program, such as `add-task` or `add-course`. Close the window.
+
+.. Re-launch the app by double-clicking the jar file. +
+   Expected: The app should re-launch into the same state as when it was
+   closed.
+
 _{ more test cases ... }_
 
-=== Deleting a person
+=== Deleting data from a list
 
 . Deleting a person while all persons are listed
 
@@ -1883,14 +1896,44 @@ _{ more test cases ... }_
    Status bar remains the same.
 
 .. Other incorrect delete commands to try: `delete`, `delete x` (where x is
-   larger than the list size) _{give more}_ +
-   Expected: Similar to previous.
+   larger than the list size) _{give more}_
++
+**Expected**: Similar to previous.
 
 === Saving data
 
-. Dealing with missing/corrupted data files
+. Missing data files
 
-.. _{explain how to simulate a missing/corrupted file and the expected
-  behavior}_
+.. Run the app once and play around with the application. Once a change is
+   made, the program will generate a data files in `./data/`
 
-_{ more test cases ... }_
+.. In `./data/`, delete `courseplanner.json`.
+
+.. Re-launch the app.
++
+**Expected**: Default Course data should now be present in the Courses tab.
+
+. Corrupted data files
+
+.. Run the app once and play around with the application. Once a change is
+   made, the program will generate a data files in `./data/`
+
+.. In `./data/`, open `courseplanner.json`. On line 2, delete the `[`:
++
+----
+1 {
+2   "courses" : [ {
+3 ...
+----
++
+should become
++
+----
+1 {
+2   "courses" : {
+3 ...
+----
+
+.. Re-launch the app.
++
+**Expected**: Go to the Courses tab and the tab should not have any data.
