--- a/docs/team/seahlynn.adoc
+++ b/docs/team/seahlynn.adoc
@@ -1,5 +1,5 @@
 
-==== Seah Lynn - Project Portfolio
+=== Seah Lynn - Project Portfolio
 :site-section: ProjectPortfolio
 :sectnums:
 :sectnumlevels: 4
@@ -30,6 +30,7 @@ Shown below are symbols that will appear in my Project Portfolio, and their sign
 [IMPORTANT]
 Information listed in this note is essential information that users should
 be mindful of, in order for +Work to function as mentioned in the User Guide.
+
 [NOTE]
 Information listed here are things that users should take note of, so as to more efficiently use +Work.
 
@@ -40,7 +41,7 @@ This section details all of my contributions to the project, and showcases how I
 * *Major enhancement*: I added the ability to retrieve the overall statistics of tasks and members in +Work.
 ** What it does: This feature allows the user to retrieve statistics relating to tasks and members in +Work, including the
 number of tasks and inventory items allocated to each member, and the proportion of tasks of different statuses, along with
-the time spent on each task added into +Work.
+the time spent on each task added.
 ** Justification: This feature increases the functionality of +Work because it gives the user a broad overview of the
 project's progress and members' responsibility allocation at a glance, which is one of the main goals of effective project management.
 ** Highlights: The statistics are displayed in the form of a Pie-Chart for easy comparison of data at a glance.
@@ -58,10 +59,9 @@ challenging to implement because I had to ensure the UI would be able to accurat
 member.
 
 * *Minor enhancement*:
-** Created the User Interface (UI) for members in +Work, which can include members' profile photos, as well as list tasks allocated to
+** Enhance the User Interface (UI) for members in +Work, which can include members' profile photos, as well as list tasks allocated to
 each member under individual member cards
-** Created the UI of statistics calculated, and made sure it was in an easy-to-read format
-** Added test cases for all additional commands and classes related to Members and Statistics
+** Created the UI of statistics calculated, and made sure it was in an easy-to-read and aesthetic format
 
 * *Code contributed*: [https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=seahlynn&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=true&tabOpen=true&tabType=authorship&tabAuthor=seahlynn&tabRepo=AY1920S1-CS2103T-T12-1%2Fmain%5Bmaster%5D[Functional code]]
  [https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=seahlynn&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=true&tabOpen=true&tabType=authorship&tabAuthor=seahlynn&tabRepo=AY1920S1-CS2103T-T12-1%2Fmain%5Bmaster%5D[Test code]]
@@ -86,29 +86,25 @@ each member under individual member cards
 We had to make changes to the original AddressBook User Guide with instructions for the features that we implemented.
 The following section displays excerpts of my additions to the *+Work User Guide* for the `Statistics` and `Member` features.
 
-[NOTE]
-The rest of my additions to the Member and Statistics commands in +Work's User Guide can be viewed in +Work's complete https://ay1920s1-cs2103t-t12-1.github.io/main/UserGuide.html#member-related-commands[User Guide].
-
 ==== Member-related Commands
 ===== Adding a member: `add-member` +
-To add a member to the list of team members in +Work, use the command 'add-member' following the format below.
-
-Format: `add-member mn/MEMBER_NAME mi/MEMBER_ID mt/TAGS`
+To add a member to the list of team members in +Work, use the command 'add-member' following the format:
+ `add-member mn/MEMBER_NAME mi/MEMBER_ID mt/TAGS`
 
 Example: `add-member mn/New Member mi/NM mt/UG` can be executed as follows:
 
 *Step 1:* +Work initially contains a list of 6 project members, as shown below.
 
-image::BeforeAdd.png[width="400"]
+image::BeforeAdd.png[width="400", align="center"]
 
 *Step 2:* To add a new project member into +Work, you enter the command `add-member mn/New Member mi/NM mt/UG` into the
 command prompt box.
 
-image::DuringAdd.png[width="400"]
-
+image::DuringAdd.png[width="400", align="center"]
+{empty} +
 *Step 3:* After you hit kbd:[Enter], the  result box will display the message "New member added", and a new member with name 'New Member', member ID 'NM' and tag 'UG' is added to +Work.
 
-image::DoneAdd.png[width="400"]
+image::DoneAdd.png[width="400", align="center"]
 
 [IMPORTANT]
 Member ID is an alphanumeric ID set by you, and cannot be changed once the member is created.
@@ -120,18 +116,15 @@ Member ID is an alphanumeric ID set by you, and cannot be changed once the membe
 `add-member mn/New Member mi/NM mt/UG mt/DG mt/...`
 ====
 
-
-
 ===== Set image for member: `set-image` +
-To set a profile picture for a member in +Work, use the command `set-image` following the format below.
-
-Format: `set-image mi/MEMBER_ID im/IMAGE_PATH` +
+To set a profile picture for a member in +Work, use the command `set-image` following the format:
+`set-image mi/MEMBER_ID im/IMAGE_PATH`
 
 Example: `set-image mi/NM im/C:\Desktop\NewUserImage.png` can be executed as follows:
 
 *Step 1:* +Work initially contains a list of project members with default profile pictures, as shown below.
 
-image::BeforeSet.png[width="400"]
+image::BeforeSet.png[width="400", align="center"]
 
 *Step 2:* To update the profile picture of the project member with member ID 'NM' in +Work to a specified image, you
 enter the command `set-image mi/NM im/C:\Desktop\NewUserImage.png` into the command prompt box.
@@ -139,7 +132,7 @@ enter the command `set-image mi/NM im/C:\Desktop\NewUserImage.png` into the comm
 *Step 3:* After you kbd:[Enter] the command, the member 'New Member' with member ID 'NM' has a new profile
 picture, specified by the image path you entered.
 
-image::SetImage.png[width="400"]
+image::SetImage.png[width="400", align="center"]
 
 [NOTE]
 Image Path refers to the folder path of the image stored in your computer, and should end with .png
@@ -152,13 +145,10 @@ It is recommended that you store all the images in a central folder to prevent t
 ==== Statistics Commands
 
 ===== Getting statistics of members: `member-stats` +
-To get statistics relating to the members in +Work, use the statistics command following the format below. +
-
-Format: `member-stats` +
-
+To get statistics relating to the members in +Work, use the statistics command following the format: `member-stats` +
 Calling the `member-stats` command will result in the statistics being displayed as follows:
 
-image::MemberStats.png[width="400"]
+image::MemberStats.png[width="400", align="center"]
 
 [NOTE]
 The resultant statistics displayed shows the proportion and number of tasks and inventory items allocated to each
@@ -173,7 +163,6 @@ The Statistics feature allows users to retrieve statistics relating to members a
 broad overview of the project and members' contribution to the project.
 
 ===== Implementation
-
 The commands introduced by this statistics feature includes: `task-stats` and `member-stats`. These commands are facilitated by the class 'Statistics'
 that resides within model. The 'Statistics' class implements the following operations:
 
@@ -189,7 +178,6 @@ Given below is an example usage scenario and how the Statistics mechanism behave
 *Step 1.* The user launches the application for the first time. The `Statistics` object stored by ProjectDashboard is initialised based on the data previously saved.
 
 [NOTE]
-
 Data previously saved refers to the statistics calculation done based on list of members, tasks and mappings saved.
 
 *Step 2.* The user executes the `task-stats` command to retrieve statistics related to the tasks in the application.
@@ -197,19 +185,24 @@ Data previously saved refers to the statistics calculation done based on list of
 The `task-stats` command obtains lists of all the members, tasks and mappings saved in the application, and uses the lists to form a Statistics object.
 `Model#setStatistics` is then called to updated the statistics in ProjectDashboard.
 
-The following sequence diagram (Figure 10) shows how the 'task-stats' operation works.
+The following sequence diagram shows how the 'task-stats' operation works.
 
-image::GetStatisticsSequenceDiagram.png[width="600"]
-Figure 10. Operational flow of `GetStatisticsCommand`
+.Operational flow of `GetStatisticsCommand`
+image::GetStatisticsSequenceDiagram.png[width="600", align="center"]
 
 [NOTE]
 The `member-stats` operation is similar to the one shown in figure 10.
 
 Step 3. In order for task statistics to be displayed in a comprehensive manner, when the `task-stats` command is called,
-`TaskStatisticsView` class is also called to display the task stats.
+`TaskStatisticsView` class is also called to display the task stats. To allow the 'UI' to be responsive, `getStatistics()`
+is similarly exposed in the `Logic`interface as `Logic#getStatistics()`.
 
-[NOTE]
-To allow the `UI` to be responsive, `getStatistics()` is similarly exposed in the `Logic` interface as `Logic#getStatistics()`
+The following sequence diagram (Figure 11) shows how calling the `task-stats` operation leads to the comprehensive UI display of task statistics.
+
+.Operational flow of displaying statistics in +Work
+image::GetStatisticsUISequenceDiagram.png[align="center"]
+
+
 // end::statisticsP1[]
 
 // tag::statisticsP2[]
@@ -252,8 +245,8 @@ This makes +Work a more comprehensive application because project tasks and memb
 +Work's members and their related commands are supported by a `Member` class that resides within model.
 The following class diagram exposes the structure of the Member class, and shows how the different components relating to the Member class works together.
 
-image::MemberClassDiagram.png[width="500"]
-Diagram 13. Class diagram of Member package
+.Class diagram of `Member` package
+image::MemberClassDiagram.png[width="500", align="center"]
 
 Apart from the typical commands (`add-member`, `delete-member`, `find-member`) involved in such a central class, the member feature also introduces a `set-image` command.
 The `set-image` command allows users to set an image in their computer as the profile picture of a member in +Work.
@@ -275,16 +268,12 @@ A new member object is formed, with all the same parameters as the specified mem
 
 The following sequence diagram shows how the 'set-image' operation works.
 
-image::SetImageSequenceDiagram.png[]
-Figure 14. Operational flow of 'SetImageCommand'
+.Operational flow of `SetImageCommand`
+image::SetImageSequenceDiagram.png[align="center"]
 
 [NOTE]
 The image's file path is stored in the Member object. If the image is shifted to another location, the file path stored becomes invalid, and the user has to call the `set-image` command again, with the new file path.
 
-The following activity diagram summarizes what happens when a user executes the `set-image` command:
-
-image::SetImageActivityDiagram.png[width="500"]
-Figure 16. Operational flow during execution of `set-image` command
 
 ===== Design Considerations
 This section describes the pros and cons of the current and other alternative implementations of the image attribute under members.
