--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -25,8 +25,8 @@ image::seanlowjk.png[width="150", align="left"]
 link:https://github.com/seanlowjk[Github] | <<seanlowjk#, Portfolio>>
 
 Role: Documentation +
-Responsibilities: Deliverables, and deadlines +
-Main project tasks: Recommend and Budgeting features
+Responsibilities: Deliverables and Deadlines +
+Main project tasks: Sorting and Alias features
 
 '''
 
@@ -41,11 +41,11 @@ Responsibilities: Recommendation, like and dislike features +
 
 === Koh Wee Lun Clarence
 image::fatclarence.png[width="150", align="left"]
-link:http://github.com/fatclarence[Github] | <<farclarence#, Portfolio>>
+link:http://github.com/fatclarence[Github] | <<fatclarence#, Portfolio>>
 
 Role: Developer +
 Responsibilities: Implementing features +
-Main project tasks: Updating and Editing features
+Main project tasks: Saving and Withdrawal features
 
 '''
 
