--- a/docs/team/kxyoke.adoc
+++ b/docs/team/kxyoke.adoc
@@ -126,18 +126,23 @@ include::../UserGuide.adoc[tag=offlinecommand]
 _End of extract from Mark User Guide_
 
 == Contributions to the Developer Guide
+We also had to update the original AB3 Developer Guide to reflect the design of Mark.
 
 |===
-|_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
+|_Given below are sections I contributed to our Developer Guide for Mark. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
 |===
+
+_Start of extract from Mark Developer Guide_
 
 include::../DeveloperGuide.adoc[tag=undoredo]
 
 include::../DeveloperGuide.adoc[tag=dataencryption]
 
+_End of extract from Mark Developer Guide_
 
-== PROJECT: PowerPointLabs
+---
+= PROJECT: Mark
 
 ---
 
-_{Optionally, you may include other projects in your portfolio.}_
+//_{Optionally, you may include other projects in your portfolio.}_
